Add CAN_msg & fix rcv25_ctrl

--- a/odrive_custom_msg/CMakeLists.txt
+++ b/odrive_custom_msg/CMakeLists.txt
@@ -7,9 +7,24 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+
+############################################################
+#Publisher
+add_executable(keyboard_sender_cpp_node src/keyboard_sender.cpp)
+ament_target_dependencies(keyboard_sender_cpp_node rclcpp std_msgs)
+
+#Subsciber
+add_executable(odrive_sender_cpp_node src/odrive_sender.cpp)
+ament_target_dependencies(odrive_sender_cpp_node rclcpp std_msgs)
+
+install(TARGETS
+  #don't forget to change the node's name here
+  keyboard_sender_cpp_node
+  odrive_sender_cpp_node
+  DESTINATION lib/${PROJECT_NAME})
+############################################################
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
