--- a/can_control_package/package.xml
+++ b/can_control_package/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>odrive_custom_msg</name>
+  <name>can_control_package</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="caoquangddon5@gmail.com">ddon</maintainer>
@@ -9,10 +9,8 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>builtin_interfaces</depend>
-  <depend>rosidl_default_generators</depend>
-
-  <member_of_group>rosidl_interface_packages</member_of_group>
+  <depend>rclcpp</depend>
+  <depend>odrive_custom_msg</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
